# Homegear-KNX-Baos

./: .gitignore  CMakeLists.txt  README.md  configure.ac  makeCoverity.sh  makeRelease.sh
debian/: changelog  control  copyright  postinst  postrm  rules
misc/Config Directory/: knxbaos.conf
misc/UI Translations/de-DE/: admin.de-DE.yaml
misc/UI Translations/en-US/: admin.en-US.yaml
src/: Baos.cpp  Baos.h  BaosCentral.cpp  BaosCentral.h  BaosPacket.cpp  BaosPacket.h  BaosPeer.cpp  BaosPeer.h  Factory.cpp  Factory.h  GD.cpp  GD.h  Interfaces.cpp  Interfaces.h  MakeDeviceDescriptionFile.cpp  MakeDeviceDescriptionFile.h  Makefile.am
src/PhysicalInterfaces/: Serial.cpp  Serial.h
